# cdm

./: .gitignore  Makefile  Makefile.am  PTG_Func2dScalar.cc  PTG_Func2dVec.cc  analyze.cc  avalanche.cc  bmi.cc  cdm.sln  cdm.vcxproj  cdmcore.vcxproj  configure.ac  dune_evolution.cc  dune_evolution.h  evolution.h  flux_stationary.cc  flux_stationary.h  globals.cc  globals.h  influx.cc  initsurf.cc  initsurfcone.cc  initsurfgauss.cc  initsurfparabol.cc  initsurfwaves.cc  iter_aval_new.cc  libcdm.vcxproj  main.cc  rotatematrix.cc  sepbubble.cc  shear.cc  shear.h  shear_hlr.cc  shore.cc  shore.h  utils.cc  utils.h  vegetation.cc  vegetation.h  wind.cc
data/case1/: params.par
data/input/: param.par
doc/: Model_and_Run.pages
include/: bmi.h
include/fftw3/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
matlab/: cdm_master.m  cdm_params.m  cdm_run.m
python/: test.py
